--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,4 +36,14 @@ services:
       - MSSQL_PID=Express
       - SA_PASSWORD=P@ssw0rd
     volumes: 
-      - ./containers/mssql:/docker-entrypoint-initdb.d
+      - ./containers/mssql/init.sql:/docker-entrypoint-initdb.d/init.sql
+  pgsql:
+    image: postgres:13.4
+    ports:
+      - 5432:5432
+    volumes:
+      - ./containers/pgsql:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: toor
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
