--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
       MYSQL_DATABASE: sunflower
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
+      LANG: ja_JP.UTF-8
+      LANGUAGE: ja_JP:ja
+      LC_ALL: ja_JP.UTF-8
     ports:
       - "3306:3306"
     volumes:
